fixed mistake with faq-bar being off center and added one more span

--- a/website/scss/main.scss
+++ b/website/scss/main.scss
@@ -389,6 +389,7 @@ header {
 
 .faq-bar {
   @extend .header-bar;
+  margin: auto;
   background-color: #6C88B7;
 }
 
